syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.vv.ufo.server.msvc.grpc";
option java_outer_classname = "DataGrpcProto";

service DataGrpc {

  rpc GetNumber(Number) returns (NumberResponse);
  rpc GetComplexData(ComplexObjectRequest) returns (ComplexObjectResponse);
}
message Empty {
}

message Number {
  int32 data = 1;
}

message NumberResponse {
  repeated int32 data = 1;
}


message ComplexObjectRequest {
  int32 count = 1;
}

message ComplexObjectResponse {
  repeated ComplexObject complexObject = 1;
}

message ComplexObject {

  float f1 = 1;
  float f2 = 2;
  float f3 = 3;
  string f4 = 4;
  int32 f5 = 5;
  string f6 = 6;
  int32 f7 = 7;
  string f8 = 8;
  string f9 = 9;
  string f10 = 10;
  int32 f11 = 11;
  int32 f12 = 12;
  bool f13 = 13;
  int32 f14 = 14;
  int32 f15 = 15;
  float f16 = 16;
  int32 f17 = 17;
  float f18 = 18;
  float f19 = 19;
  float f20 = 20;
  string f21 = 21;
  int32 f22 = 22;
  double f23 = 23;
  string f24 = 24;
  double f25 = 25;
  double f26 = 26;
  string f27 = 27;
  int32 f28 = 28;
  string f29 = 29;
  string f30 = 30;
  int32 f31 = 31;
  int32 f32 = 32;
  bool f33 = 33;
  int32 f34 = 34;
  int32 f35 = 35;
  float f36 = 36;
  bool f37 = 37;
  float f38 = 38;
  float f39 = 39;
  float f40 = 40;
  double f41 = 41;
  string f42 = 42;
  double f43 = 43;
  string f44 = 44;
  double f45 = 45;
  string f46 = 46;
  bool f47 = 47;
  string f48 = 48;
  string f49 = 49;
  string f50 = 50;
  int32 f51 = 51;
  double f52 = 52;
  int32 f53 = 53;
  double f54 = 54;
  int32 f55 = 55;
  bool f56 = 56;
  float f57 = 57;
  float f58 = 58;
  bool f59 = 59;
  float f60 = 60;
  string f61 = 61;
  string f62 = 62;
  double f63 = 63;
  bool f64 = 64;
  string f65 = 65;
  double f66 = 66;
  bool f67 = 67;
  double f68 = 68;
  string f69 = 69;
  string f70 = 70;
  int32 f71 = 71;
  int32 f72 = 72;
  int32 f73 = 73;
  int32 f74 = 74;
  int32 f75 = 75;
  float f76 = 76;
  float f77 = 77;
  float f78 = 78;
  float f79 = 79;
  float f80 = 80;
  double f81 = 81;
  string f82 = 82;
  double f83 = 83;
  bool f84 = 84;
  string f85 = 85;
  string f86 = 86;
  bool f87 = 87;
  string f88 = 88;
  string f89 = 89;
  string f90 = 90;
  int32 f91 = 91;
  int32 f92 = 92;
  int32 f93 = 93;
  int32 f94 = 94;
  int32 f95 = 95;
  int32 f96 = 96;
  repeated F97 f97 = 97;
  repeated F98 f98 = 98;
  repeated F99 f99 = 99;
}

message F97 {
  bool f1 = 1;
  string f2 = 2;
  string f3 = 3;
  bool f4 = 4;
  string f5 = 5;
  string f6 = 6;
  string f7 = 7;
}

message F98 {
  float f1 = 1;
  float f2 = 2;
  float f3 = 3;
  float f4 = 4;
  float f5 = 5;
  int32 f6 = 6;
  int32 f7 = 7;
}

message F99 {
  int32 f1 = 1;
  int32 f2 = 2;
  int32 f3 = 3;
  string f4 = 4;
  string f5 = 5;
  string f6 = 6;
  string f7 = 7;
}



